fix : resolve too much padding for contact button

--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ a{
 button {
     border: none;
     border-radius: 8px;
-    padding: 0.8rem 1.8rem;
+    padding: 0.6rem 1rem;
     background: #2189ff;
     font-weight: 500;
 }
